Configure GitHub Pages path and update data source

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev-windows": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export"
+    "export": "node scripts/fetch-database.js && next build && next export"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
